@@ -15,7 +15,6 @@ import com.roome.domain.mycd.repository.MyCdRepository;
 import com.roome.domain.user.entity.User;
 import com.roome.domain.user.repository.UserRepository;
 import com.roome.global.exception.ForbiddenException;
-import com.roome.global.exception.UnauthorizedException;
 import com.roome.global.jwt.exception.UserNotFoundException;
 import jakarta.transaction.Transactional;
 import java.util.List;
@@ -27,6 +26,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -37,6 +37,7 @@ public class CdCommentService {
   private final MyCdRepository myCdRepository;
   private final UserRepository userRepository;
   private final ApplicationEventPublisher eventPublisher;// 이벤트 발행자
+
   public CdCommentResponse addComment(Long userId, Long myCdId, CdCommentCreateRequest request) {
     MyCd myCd = myCdRepository.findById(myCdId)
         .orElseThrow(MyCdNotFoundException::new);
@@ -57,15 +58,15 @@ public class CdCommentService {
     Long cdOwnerId = myCd.getUser().getId();
     if (!userId.equals(cdOwnerId)) {
       log.info("CD 코멘트 알림 이벤트 발행: 발신자={}, 수신자={}, CD={}, 코멘트={}",
-              userId, cdOwnerId, myCdId, savedComment.getId());
+          userId, cdOwnerId, myCdId, savedComment.getId());
 
       try {
         eventPublisher.publishEvent(new CdCommentCreatedEvent(
-                this,
-                userId,         // 발신자 (댓글 작성자)
-                cdOwnerId,      // 수신자 (CD 소유자)
-                myCdId,         // CD ID
-                savedComment.getId() // 코멘트 ID
+            this,
+            userId,         // 발신자 (댓글 작성자)
+            cdOwnerId,      // 수신자 (CD 소유자)
+            myCdId,         // CD ID
+            savedComment.getId() // 코멘트 ID
         ));
       } catch (Exception e) {
         log.error("CD 코멘트 알림 이벤트 발행 중 오류 발생: {}", e.getMessage(), e);
@@ -85,16 +86,24 @@ public class CdCommentService {
   }
 
   @Transactional
-  public CdCommentListResponse getComments(Long myCdId, int page, int size) {
-    PageRequest pageRequest = PageRequest.of(page, size);
-    Page<CdComment> commentPage = cdCommentRepository.findByMyCdId(myCdId, pageRequest);
+  public CdCommentListResponse getComments(Long myCdId, String keyword, int page, int size) {
+    Pageable pageable = PageRequest.of(page, size);
+    Page<CdComment> commentPage;
+
+    if (keyword == null || keyword.trim().isEmpty()) {
+      // 키워드가 없으면 전체 댓글 조회
+      commentPage = cdCommentRepository.findByMyCdId(myCdId, pageable);
+    } else {
+      // 키워드가 있으면 해당 키워드 포함된 댓글 검색
+      commentPage = cdCommentRepository.findByMyCdIdAndKeyword(myCdId, keyword, pageable);
+    }
 
     if (commentPage.isEmpty()) {
       throw new CdCommentListEmptyException();
     }
 
-    List<CdCommentResponse> comments = commentPage.getContent().stream()
-        .map(comment -> new CdCommentResponse(
+    return new CdCommentListResponse(
+        commentPage.map(comment -> new CdCommentResponse(
             comment.getId(),
             comment.getMyCd().getId(),
             comment.getUser().getId(),
@@ -102,21 +111,22 @@ public class CdCommentService {
             comment.getTimestamp(),
             comment.getContent(),
             comment.getCreatedAt()
-        ))
-        .collect(Collectors.toList());
-
-    return new CdCommentListResponse(comments, page, size, commentPage.getTotalElements(),
-        commentPage.getTotalPages());
+        )).toList(),
+        page,
+        size,
+        commentPage.getTotalElements(),
+        commentPage.getTotalPages()
+    );
   }
 
-  public CdCommentListResponse getAllComments(Long myCdId) {
+  public List<CdCommentResponse> getAllComments(Long myCdId) {
     List<CdComment> comments = cdCommentRepository.findByMyCdId(myCdId);
 
     if (comments.isEmpty()) {
       throw new CdCommentListEmptyException();
     }
 
-    List<CdCommentResponse> responseList = comments.stream()
+    return comments.stream()
         .map(comment -> new CdCommentResponse(
             comment.getId(),
             comment.getMyCd().getId(),
@@ -127,8 +137,6 @@ public class CdCommentService {
             comment.getCreatedAt()
         ))
         .collect(Collectors.toList());
-
-    return new CdCommentListResponse(responseList, 0, responseList.size(), responseList.size(), 1);
   }
 
   public CdCommentListResponse searchComments(Long myCdId, String keyword, int page, int size) {
